Code cleanup and readme update