@@ -1,2 +1,9 @@
 # carrier-pigeon
-A peer-to-peer comunicator 
+A peer-to-peer communicator 
+
+Release file may be foud in out/artifacts/carrier_pigeon_jar. To run application JavaFx is required
+```
+java --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.base,javafx.fxml,javafx.graphics -jar carrier-pigeon.jar
+```
+
+Project has been run and tested on Ubuntu 20.04 LTS
